@@ -1,3 +1,5 @@
+* Use origin Reference on Invoice Line and Stock Move
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 
